fix shadow and spacing

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -16,7 +16,7 @@
 	background: $tier1-card-bg;
 	color: $tier1-txt;
 	border: 1px solid $tier1-txt;
-	box-shadow: 3px 3px 10px $gray-999;
+	// box-shadow: 3px 3px 10px $gray-999;
 	padding-top: 2px;
 	padding-bottom: 2px;
 
