--- a/app/assets/stylesheets/components/_form_slug.scss
+++ b/app/assets/stylesheets/components/_form_slug.scss
@@ -32,6 +32,7 @@ $radius-global: 2px;
 	font-family: $mono-font;
 	font-size: 1.5rem;
 	letter-spacing: 6px;
+	margin-right: -6px;
 	text-transform: uppercase;
 
 	&::placeholder {
